# EliminateRs

./: Cargo.toml
.github/: Update.md
Source/: Library.rs
Source/Fn/: Eliminate.rs  mod.rs
Source/Fn/Binary/: Command.rs
Source/Fn/Binary/Command/: Entry.rs  Parallel.rs  Sequential.rs
Source/Fn/Eliminate/: Test.rs
