[[bin]]
name = "PEliminate"
path = "Source/Library.rs"

[[bin]]
name = "Eliminate"
path = "Source/Library.rs"

[dependencies]
# pieces = { version = "1.0.0", path = "../Pieces" }
chrono = { version = "0.4.39" }
clap = { features = ["derive"], version = "4.5.26" }
dashmap = { version = "6.1.0" }
futures = { version = "0.3.31" }
git2 = { version = "0.20.0" }
itertools = { version = "0.14.0" }
num_cpus = { version = "1.16.0" }
rayon = { version = "1.10.0" }
regex = { version = "1.11.1" }
swc_common = "5.0.0"
swc_ecma_ast = "5.0.2"
swc_ecma_codegen = "5.1.0"
swc_ecma_parser = "6.0.2"
swc_ecma_visit = "5.0.0"
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = ["full"] }
unbug = { version = "0.4.0" }
walkdir = { version = "2.5.0" }

[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.19" }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Eliminate"
description = "🗣️ Eliminate —"
license-file = "LICENSE"
name = "peliminate"
repository = "https://github.com/PlayForm/Eliminate.git"
version = "0.1.4"
edition = "2021"
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]

[features]
default = []
